logic/src/parse/snapshots/logic__parse__ui__invalid_brackets_1.snap
---
source: logic/src/parse/ui.rs
assertion_line: 40
expression: "ui_test(\"( ( ) a\".to_string())"

---
error: Your program contains a syntax error!
  ┌─ file:1:7
  │
1 │ ( ( ) a
  │       ^ Expected an operator here. Instead we found `a`.


